Add routes and data model for sharing alias pages
